[332]: Fix other new unit test, clean up method a little